# nbvariants

./: .gitignore  pyproject.toml  requirements.txt
nbvariants/: __init__.py  _nb_tools.py  nbvariants.py
tests/: test_convert.py
tests/data/: UNet_corr.ipynb  UNet_source.ipynb
